# Auction_Insight

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: simulation.yml
data/: simulation_report.json  simulation_report.md
decks/: weekly_intelligence_w26.md
docs/: framework.md
examples/: run_simulation.py
pyspark/: kpi_computation.py
sql/: queries.sql  schemas.sql
src/auctioninsight/: __init__.py  __main__.py  core.py  reporting.py  scenarios.py
tests/: test_core.py
